--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "geoscan.js",
   "dependencies": {
+    "better-console": "^0.2.3",
     "cli-table": "^0.3.0",
     "node-freegeoip": "0.0.1",
+    "optimist": "^0.6.1",
     "raw-socket": "^1.2.2"
   },
   "devDependencies": {},
