--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "better-console": "^0.2.3",
     "cli-table": "^0.3.0",
+    "mongoose": "^3.8.12",
     "node-freegeoip": "0.0.1",
     "optimist": "^0.6.1",
     "raw-socket": "^1.2.2"
